Minor Fix
Fixed:
-Search icon misalignment.
-Moved logo a little bit to the left
-Moved person and shopping cart icon a little bit to the right.

--- a/Libra's Essence/src/styles/app.css
+++ b/Libra's Essence/src/styles/app.css
@@ -25,12 +25,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0rem;
+  gap: 1rem;
 }
 
 .logo {
   height: 50px;
-  margin-right: 1rem;
   display: flex;
   cursor: pointer;
 }
@@ -48,7 +47,7 @@
 .search-icon {
   position: absolute;
   top: 3%;
-  right: 35%;
+  right: 31%;
   color: #d6d5d5;
   font-size: 24px;
   cursor: pointer;
